Added Navbar, Header, Main and Footer

--- a/index.html
+++ b/index.html
@@ -1,13 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LEGO-DUDES WEBSHOP</title>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Arild Edvin Andreassen">
+    <title>WEBSHOP</title>
+    <!-- ===== -->
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,6..96,500;0,6..96,600;0,6..96,700;0,6..96,800;0,6..96,900;1,6..96,400;1,6..96,500;1,6..96,600;1,6..96,700;1,6..96,800;1,6..96,900&display=swap" rel="stylesheet">
+    <!-- ======= -->
+    <!-- Scripts -->
     <script type="text/javascript" src="shopscript.js" defer></script>
+    <!-- =========== -->
+    <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="webshopstyle.css">
 </head>
 <body>
+
+<!-- NAVBAR -->
+<nav id="navbar" class="flexbox">
+    <div class="navbar-inner flexbox view-width">
+        <div class="navbar-left">
+            <h1 class="navbar-logo">SoMe.</h1>
+        </div>
+        <div class="navbar-right">
+            <ul class="navbar-items flexbox-right">
+                <li class="navbar-item"><a href="" class="navbar-item-inner">Home</a></li>
+                <li class="navbar-item"><a href="" class="navbar-item-inner">Womens</a></li>
+                <li class="navbar-item"><a href="" class="navbar-item-inner">Mens</a></li>
+                <li class="navbar-item"><a href="" class="navbar-item-inner">Favorites</a></li>
+                <li class="navbar-item"><a href="" class="navbar-item-inner">Cart</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- HEADER -->
+<header id="header" class="flexbox">
+    <h1 class="header-title">Winter Collection</h1>
+    <img class="header-background" src="https://images.unsplash.com/photo-1506901437675-cde80ff9c746?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="">
+</header>
+
+<!-- MAIN -->
+<main id="main" class="flexbox-col">
+
+    <section class="promo-card view-width">
+        <div class="promo-card-left"></div>
+        <div class="promo-card-center">
+            <img class="promo-card-image" src="https://images.unsplash.com/photo-1508186225823-0963cf9ab0de?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="">
+        </div>
+        <div class="promo-card-right flexbox-col">
+            <h2 class="promo-card-title">Eye shadow</h2>
+            <p class="promo-card-price">$50</p>
+        </div>
+    </section>
+
+</main>
+
+<!-- FOOTER -->
+<footer id="footer" class="flexbox-col">
+
+    <div class="footer-tagline flexbox view-width">
+        <h2>Clothes for everyone.</h2>
+    </div>
+
+    <div class="footer-navigation view-width">
+        <div class="footer-nav-left flexbox-left-ns">
+            <div class="footer-nav-logo flexbox-left-ns">
+                <h1 class="footer-logo">SoMe.</h1>
+            </div>
+        </div>
+        <div class="footer-nav-right flexbox-right-ns">
+            <ul class="footer-items flexbox-col-left-ns">
+                <li class="footer-item"><a href="" class="footer-item-inner">Home</a></li>
+                <li class="footer-item"><a href="" class="footer-item-inner">Cart</a></li>
+            </ul>
+            <ul class="footer-items flexbox-col-left-ns">
+                <li class="footer-item"><a href="" class="footer-item-inner">Womens</a></li>
+                <li class="footer-item"><a href="" class="footer-item-inner">Mens</a></li>
+                <li class="footer-item"><a href="" class="footer-item-inner">Favorites</a></li>
+            </ul>
+            <ul class="footer-items flexbox-col-left-ns">
+                <li class="footer-item"><a href="" class="footer-item-inner footer-item-button"><span>Contact</span></a></li>
+            </ul>
+        </div>
+    </div>
+
+</footer>
 
 </body>
 </html>
