Fixed loading and main

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 </head>
 <body>
 
+<!-- LOADING -->
+<div id="loader" class="flexbox">
+    <div class="loader-wrapper flexbox">
+        <div class="loader-icon"><span></span></div>
+    </div>
+</div>
+
 <!-- NAVBAR -->
 <nav id="navbar" class="flexbox">
     <div class="navbar-inner flexbox view-width">
@@ -43,22 +50,32 @@
 
 <!-- HEADER -->
 <header id="header" class="flexbox">
-    <h1 class="header-title">Winter Collection</h1>
+    <h1 class="header-title">Dark Collection</h1>
     <img class="header-background" src="https://images.unsplash.com/photo-1506901437675-cde80ff9c746?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="">
 </header>
 
 <!-- MAIN -->
 <main id="main" class="flexbox-col">
 
-    <section class="promo-card view-width">
-        <div class="promo-card-left"></div>
-        <div class="promo-card-center">
-            <img class="promo-card-image" src="https://images.unsplash.com/photo-1508186225823-0963cf9ab0de?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="">
+    <section class="promo-card-section flexbox-col view-width">
+        <div class="promo-card-sec-top flexbox-col">
+            <h2 class="promo-card-sec-title">Dark Shadows</h2>
+            <p class="promo-card-sec-subtitle">Collection 2023</p>
         </div>
-        <div class="promo-card-right flexbox-col">
-            <h2 class="promo-card-title">Eye shadow</h2>
-            <p class="promo-card-price">$50</p>
-        </div>
+
+        <article class="promo-card">
+            <div class="promo-card-left">
+                <h2 class="promo-card-title">&nbsp</h2>
+                <p class="promo-card-price">&nbsp</p>
+            </div>
+            <div class="promo-card-center">
+                <img class="promo-card-image" src="https://images.unsplash.com/photo-1604004215402-e0be233f39be?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="">
+            </div>
+            <div class="promo-card-right flexbox-col">
+                <h2 class="promo-card-title">Shadow Jacket</h2>
+                <p class="promo-card-price">$150</p>
+            </div>
+        </article>
     </section>
 
 </main>
