--- a/index.html
+++ b/index.html
@@ -73,7 +73,60 @@
             </div>
             <div class="promo-card-right flexbox-col">
                 <h2 class="promo-card-title">Shadow Jacket</h2>
-                <p class="promo-card-price">$150</p>
+                <p class="promo-card-price">$159,99</p>
+            </div>
+        </article>
+    </section>
+
+    <section class="product-cards view-width">
+        <article class="product-card">
+            <div class="product-card-top">
+                <h3 class="product-card-title">Deep Black Shirt</h3>
+                <p class="product-card-price">$69,99</p>
+            </div>
+            <div class="product-card-image-wrapper flexbox">
+                <button class="product-card-button">Buy Now</button>
+                <img class="product-card-image" src="https://images.unsplash.com/photo-1609543563735-d7cfaf71addb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="">
+            </div>
+        </article>
+        <article class="product-card">
+            <div class="product-card-top">
+                <h3 class="product-card-title">Black Hole Crewneck</h3>
+                <p class="product-card-price">$79,99</p>
+            </div>
+            <div class="product-card-image-wrapper flexbox">
+                <button class="product-card-button">Buy Now</button>
+                <img class="product-card-image" src="https://images.unsplash.com/photo-1604004382519-f8dd5f1237c9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="">
+            </div>
+        </article>
+        <article class="product-card">
+            <div class="product-card-top">
+                <h3 class="product-card-title">The Black Checkmate</h3>
+                <p class="product-card-price">$109,99</p>
+            </div>
+            <div class="product-card-image-wrapper flexbox">
+                <button class="product-card-button">Buy Now</button>
+                <img class="product-card-image" src="https://images.unsplash.com/photo-1576800774081-68c65e87becc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2022&q=80" alt="">
+            </div>
+        </article>
+        <article class="product-card">
+            <div class="product-card-top">
+                <h3 class="product-card-title">Dark Sea Hoodie</h3>
+                <p class="product-card-price">$89,99</p>
+            </div>
+            <div class="product-card-image-wrapper flexbox">
+                <button class="product-card-button">Buy Now</button>
+                <img class="product-card-image" src="https://images.unsplash.com/photo-1514416497375-12bed6955a25?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1536&q=80" alt="">
+            </div>
+        </article>
+        <article class="product-card">
+            <div class="product-card-top">
+                <h3 class="product-card-title">Dark Dreams Dress</h3>
+                <p class="product-card-price">$159,99</p>
+            </div>
+            <div class="product-card-image-wrapper flexbox">
+                <button class="product-card-button">Buy Now</button>
+                <img class="product-card-image" src="https://images.unsplash.com/photo-1633381521050-26bb467d9d5a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="">
             </div>
         </article>
     </section>
