--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <li class="footer-item"><a href="" class="footer-item-inner">Favorites</a></li>
             </ul>
             <ul class="footer-items flexbox-col-left-ns">
-                <li class="footer-item"><a href="" class="footer-item-inner footer-item-button"><span>Contact</span></a></li>
+                <li class="footer-item"><a href="" class="footer-item-button"><span>Contact</span></a></li>
             </ul>
         </div>
     </div>
